ENG-5123: Fix styling for Universe resource numbers by increasing spacing between each metric and moving buttons to a new row when viewport size is small enough.
Summary:
Add margin between Universe resource numbers and add copy of buttons outside of flex
container that gets displayed when window size is less than 991px.

Test Plan:
Resize window on Create Universe page and check the resource numbers at the bottom of
page. Then try resizing window on Edit Universe page.

**Desktop view (Large)**
Original:
{F12195}

Change:
{F12196}

**Tablet view (Medium)**
Original:
{F12199}

Change:
{F12200}

**Mobile view (Small)** Notice the horizontal scrollbar
Original:
{F12203}

Change:
{F12204}

Reviewers: vit.pankin, ram

Reviewed By: ram

Subscribers: jenkins-bot, ui

Differential Revision: https://phabricator.dev.yugabyte.com/D6625

--- a/managed/ui/src/components/universes/UniverseResources/UniverseResources.scss
+++ b/managed/ui/src/components/universes/UniverseResources/UniverseResources.scss
@@ -4,7 +4,7 @@
   text-align: center;
   display: flex;
   flex-flow: row wrap;
-  padding: 8px 0;
+  padding: 8px;
   justify-content: space-evenly;
   @media (min-width: 768px) {
     flex-wrap: nowrap;
@@ -18,5 +18,6 @@
   .yb-resource-count {
     min-width: 70px;
     text-align: left;
+    margin-right: 30px;
   }
 }
